[tool.poetry]
name = "heatcontrol"
version = "0.1.0"
description = ""
authors = ["Rami Rahikkala <rami.rahikkala@vincit.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
schedule = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
